--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
      <div class="container">This is fluid container. and it will go till the end of the page</div> 
      <h3>@center container</h3>
      <div class="container container-center">This is a centered container  and it will go till a given width and center content mostly used for headings and hilights</div>
+     <hr>
      <h2>@links</h2>
 
-     <a href="/">primary link</a>
-     <a href="/">secondary link</a>
+     <a class="link primary-link" href="/">primary link</a>
+     <a class="link secondary-link"href="/">secondary link</a>
      <hr>
      <h2>@lists</h2>
      <h3>unordered list</h3>
      <ul>
         <li>Item one</li>
-        <li>Item two</li>
+        <li>Item two</li>s
         <li>Item three</li>
      </ul>
      <h3>unordered inline list</h3>
