--- a/index.html
+++ b/index.html
@@ -38,18 +38,19 @@
      <hr>
      <h2>@lists</h2>
      <h3>unordered list</h3>
-     <ul>
+     <p>this list will not have any bullet</p>
+     <ul class="list-non-bullet">
         <li>Item one</li>
         <li>Item two</li>s
         <li>Item three</li>
      </ul>
      <h3>unordered inline list</h3>
-     <ul>
-        <li>Inline list one</li>
-        <li>Inline list two</li>
-        <li>Inline list three</li>
+     <ul class="list-non-bullet">
+        <li class="list-item-inline">Inline list one</li>
+        <li class="list-item-inline">Inline list two</li>
+        <li class="list-item-inline">Inline list three</li>
     </ul>
-    <ol>
+    <ol reversed>
         <li>milk</li>
         <li>boost</li>
         <li>chocos</li>
