--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
         <li class="list-item-inline">Inline list three</li>
     </ul>
     <ol reversed>
-        <li>milk</li>
-        <li>boost</li>
+         <li>milk</li>
+         <li>boost</li>
         <li>chocos</li>
     </ol>
    <hr>
    <h2>@nav</h2>
-   <nav>
-    <div>iAmBrand</div>
-    <ul>
-        <li>
-            <a href="/">home</a>
+   <nav class="navigation container">
+    <div class="nav-brand">iAmBrand</div>
+    <ul class="list-non-bullet nav-pills">
+        <li class="list-item-inline">
+            <a class="link link-active" href="/">home</a>
         </li>
-        <li>
-            <a href="/">products</a>
+        <li class="list-item-inline">
+            <a class="link" href="/">products</a>
         </li>
-        <li>
-            <a href="/">about</a>
+        <li class="list-item-inline">
+            <a class="link" href="/">about</a>
         </li>
         </ul>
    </nav>
