--- a/index.html
+++ b/index.html
@@ -80,9 +80,18 @@
  </header>
 <hr>
 <h2>@section</h2>
-<section>
-    <h3>off white screen</h3>
+<section class="section">
+    <div class="container-center">
+        <h1>white screen</h1>
+        <p>This will have white background</p>
+    </div>
+   
+</section>
+<section class="section div">
+    <div class="container-center">
+    <h1>off white screen</h1>
     <p>This will have gray background</p>
+</div>
 </section>
 <footer>
     <div>Some small heading inside footer</div>
