--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
    
    <h2>Bahubali</h2>
    <img class="movie-poster" src="https://1.bp.blogspot.com/-r1ldLtsk2OU/XsItetu52NI/AAAAAAAACzU/-nUu7naV9dc7myKpnD7nf1uqQ0QwETuSQCLcBGAsYHQ/s1600/Bahuballi%2B2..jpg">
-   <h1 class="movie-heading">amarendra bahubali-the <span style="color:var(--primary-color)">web developer</span></h1>
+   <h1 class="movie-heading">Amarendra Bahubali-The <span style="color:var(--primary-color)">Web Developer</span></h1>
  </header>
 <hr>
 <h2>@section</h2>
@@ -93,13 +93,16 @@
     <p>This will have gray background</p>
 </div>
 </section>
-<footer>
-    <div>Some small heading inside footer</div>
-    <ul>
-        <li>socialone</li>
-        <li>socialtwo</li>
-        <li>socialthree</li>
+<h2>@footer</h2>
+<footer class="footer">
+    <div class="footer-header">Some small heading inside footer</div>
+    <div>
+    <ul class="social-links list-non-bullet">
+        <li class="list-item-inline"><a class="link" href="/">socialone</a></li>
+        <li class="list-item-inline"><a class="link"href="/">socialtwo</a></li>
+        <li class="list-item-inline"><a class="link" href="/">socialthree</a></li>
     </ul>
+</div>
 </footer>
 </body>
 </html>
