changes for links

--- a/index.html
+++ b/index.html
@@ -4,105 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Component Library</title>
-  <!--css way 1: <style>
-    body{
-        color: red;
-    }
-   </style>-->
-   <!-- Third way of css : external link-->
-   <link href="style.css" rel= "stylesheet"/>
+    <title>home | NEHA</title>
+    <link href="style.css" rel= "stylesheet"/>
 </head>
 <body>
-    <!--css way 2 : <h1 style ="color: red"> #id for headings,.class for para-->
-     <h1>Neha's Component Library</h1>
-     <p>I'm attending neog.camp and I want to make a library which would make all my projects look and consistent.</p> 
-      <hr>
-      <h2>@typography</h2>
-      <h1>this is the biggest heading</h1>
-       <h2>This is the second biggest</h2>
-       <p>Let me show the normal text.This is free flowing and will wrap at the end like a pragraph</p>
-       <p>this will have <strong>bold</strong> text</p>
-     <small>This is relatively small size</small>
-
-     <h2>@container</h2>
-     <h3>@fluid container</h3>
-     <div class="container">This is fluid container. and it will go till the end of the page</div> 
-     <h3>@center container</h3>
-     <div class="container container-center">This is a centered container  and it will go till a given width and center content mostly used for headings and hilights</div>
-     <hr>
-     <h2>@links</h2>
-
-     <a class="link primary-link" href="/">primary link</a>
-     <a class="link secondary-link"href="/">secondary link</a>
-     <hr>
-     <h2>@lists</h2>
-     <h3>unordered list</h3>
-     <p>this list will not have any bullet</p>
-     <ul class="list-non-bullet">
-        <li>Item one</li>
-        <li>Item two</li>
-        <li>Item three</li>
-     </ul>
-     <h3>unordered inline list</h3>
-     <ul class="list-non-bullet">
-        <li class="list-item-inline">Inline list one</li>
-        <li class="list-item-inline">Inline list two</li>
-        <li class="list-item-inline">Inline list three</li>
-    </ul>
-    <ol reversed>
-         <li>milk</li>
-         <li>boost</li>
-        <li>chocos</li>
-    </ol>
-   <hr>
-   <h2>@nav</h2>
-   <nav class="navigation container">
-    <div class="nav-brand">iAmBrand</div>
-    <ul class="list-non-bullet nav-pills">
-        <li class="list-item-inline">
-            <a class="link link-active" href="/">home</a>
-        </li>
-        <li class="list-item-inline">
-            <a class="link" href="/">products</a>
-        </li>
-        <li class="list-item-inline">
-            <a class="link" href="/">about</a>
-        </li>
-        </ul>
-   </nav>
-   <h2>@header</h2>
+    <h1>NEHA</h1>
+    <nav class="navigation container">
+        <div class="nav-brand">i Am a Developer</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link link-active" href="/index.html">Home</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/projects.html">Projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/blogs.html">Blogs</a>
+            </li>
+            </ul>
+       </nav>
    <header class="movie">
-   
-   <h2>Bahubali</h2>
-   <img class="movie-poster" src="https://1.bp.blogspot.com/-r1ldLtsk2OU/XsItetu52NI/AAAAAAAACzU/-nUu7naV9dc7myKpnD7nf1uqQ0QwETuSQCLcBGAsYHQ/s1600/Bahuballi%2B2..jpg">
-   <h1 class="movie-heading">Amarendra Bahubali-The <span style="color:var(--primary-color)">Web Developer</span></h1>
- </header>
-<hr>
-<h2>@section</h2>
+   <img class="movie-poster" src="images/developer.svg">
+   <h1 class="movie-heading">My <span style="color:var(--primary-color)">Portfolio</span></h1>
+</header>
+<section class="section div">
+    <div class="container-center">
+    <h1>Technologies</h1>
+    <p>I'm familiar with HTML5,CSS3,Git,JavaScript and Web Hosting</p>
+</div>
+</section>
 <section class="section">
     <div class="container-center">
-        <h1>white screen</h1>
-        <p>This will have white background</p>
+        <h1>Projects</h1>
+        <p>I like to showcase my work and you can see my projects hosted online</p><a class="link primary-link" href="/"> See Projects</a>
     </div>
    
 </section>
 <section class="section div">
     <div class="container-center">
-    <h1>off white screen</h1>
-    <p>This will have gray background</p>
+    <h1>Blogs</h1>
+    <p>I like to document my work and my thoughts</p><a class="link secondary-link"href="/">Read Blogs</a>
 </div>
 </section>
-<h2>@footer</h2>
 <footer class="footer">
-    <div class="footer-header">Some small heading inside footer</div>
+    <div class="footer-header">Connect me Online!!</div>
     <div>
     <ul class="social-links list-non-bullet">
-        <li class="list-item-inline"><a class="link" href="/">socialone</a></li>
-        <li class="list-item-inline"><a class="link"href="/">socialtwo</a></li>
-        <li class="list-item-inline"><a class="link" href="/">socialthree</a></li>
+        <li class="list-item-inline"><a class="github.com/NehaBajjuri" href="/">github</a></li>
+        <li class="list-item-inline"><a class="https://twitter.com/BajjuriNeha?t=3ssx9nlfKtxhGpqSG2Ap4Q&s=08"href="/">twitter</a></li>
+        <li class="list-item-inline"><a class="https://www.linkedin.com/in/neha-bajjuri-473253227" href="/">linkedIn</a></li>
     </ul>
 </div>
 </footer>
+
+ 
 </body>
 </html>
