--- a/index.html
+++ b/index.html
@@ -36,23 +36,25 @@
 <section class="section">
     <div class="container-center">
         <h1>Projects</h1>
-        <p>I like to showcase my work and you can see my projects hosted online</p><a class="link primary-link" href="/"> See Projects</a>
+        <p>I like to showcase my work and you can see my projects hosted online</p><a class="link primary-link" href="/projects.html"> See Projects</a>
     </div>
    
 </section>
 <section class="section div">
     <div class="container-center">
     <h1>Blogs</h1>
-    <p>I like to document my work and my thoughts</p><a class="link secondary-link"href="/">Read Blogs</a>
+    <p>I like to document my work and my thoughts</p><a class="link secondary-link" href="/blogs.html">Read Blogs</a>
 </div>
 </section>
 <footer class="footer">
     <div class="footer-header">Connect me Online!!</div>
     <div>
     <ul class="social-links list-non-bullet">
-        <li class="list-item-inline"><a class="github.com/NehaBajjuri" href="/">github</a></li>
-        <li class="list-item-inline"><a class="https://twitter.com/BajjuriNeha?t=3ssx9nlfKtxhGpqSG2Ap4Q&s=08"href="/">twitter</a></li>
-        <li class="list-item-inline"><a class="https://www.linkedin.com/in/neha-bajjuri-473253227" href="/">linkedIn</a></li>
+        <li class="list-item-inline"><a class="link" href="https://github.com/nehabajjuri">github</a></li>
+        <li class="list-item-inline"><a class="link" href="https://twitter.com/bajjurineha">twitter</a></li>
+        <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/neha-bajjuri-473253227">linkedin</a></li>
+        
+
     </ul>
 </div>
 </footer>
