--- a/projects.html
+++ b/projects.html
@@ -42,8 +42,16 @@
                     A CLI app built with <strong>Node JS</strong> .You can send this to your friends and family
                     and check who really knows you.
                 </p>
-                <a class="link primary-link" href ="/">Live Project</a>
-                <a class="link secondary-link" href ="/">Source Project</a>
+                <a class="link primary-link" href ="https://replit.com/@nehabajjuri/Do-you-know-me?embed=1&output=1">Live Project</a>
+                <a class="link secondary-link" href ="https://replit.com/@neha-bajjuri">Source Project</a>
+                <h1>How well you know me?</h1>
+                <small>August 2022</small>
+                <p>
+                    A CLI app built with <strong>Node JS</strong> .You can send this to your friends and family
+                    and check who really knows you.
+                </p>
+                <a class="link primary-link" href ="https://replit.com/@nehabajjuri/Bahubali?embed=1&output=1">Live Project</a>
+                <a class="link secondary-link" href ="https://replit.com/@nehabajjuri">Source Project</a>
             </div>
             
         </li>
