added correct links

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
                     and check who really knows you.
                 </p>
                 <a class="link primary-link" href ="https://replit.com/@nehabajjuri/Do-you-know-me?embed=1&output=1">Live Project</a>
-                <a class="link secondary-link" href ="https://replit.com/@neha-bajjuri">Source Project</a>
+                <a class="link secondary-link" href ="https://replit.com/@nehabajjuri/Do-you-know-me#index.js">Source Project</a>
                 <h1>How well you know me?</h1>
                 <small>August 2022</small>
                 <p>
@@ -51,7 +51,7 @@
                     and check who really knows you.
                 </p>
                 <a class="link primary-link" href ="https://replit.com/@nehabajjuri/Bahubali?embed=1&output=1">Live Project</a>
-                <a class="link secondary-link" href ="https://replit.com/@nehabajjuri">Source Project</a>
+                <a class="link secondary-link" href ="https://replit.com/@nehabajjuri/Bahubali#index.js">Source Project</a>
             </div>
             
         </li>
