--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
                 </p>
                 <a class="link primary-link" href ="https://replit.com/@nehabajjuri/Do-you-know-me?embed=1&output=1">Live Project</a>
                 <a class="link secondary-link" href ="https://replit.com/@nehabajjuri/Do-you-know-me#index.js">Source Project</a>
-                <h1>How well you know me?</h1>
+                <h1>Bahubali</h1>
                 <small>August 2022</small>
                 <p>
                     A CLI app built with <strong>Node JS</strong> .You can send this to your friends and family
@@ -52,6 +52,13 @@
                 </p>
                 <a class="link primary-link" href ="https://replit.com/@nehabajjuri/Bahubali?embed=1&output=1">Live Project</a>
                 <a class="link secondary-link" href ="https://replit.com/@nehabajjuri/Bahubali#index.js">Source Project</a>
+                <h1>How well you know me?</h1>
+                <small>October 2022</small>
+                <p>
+                   My Portfolio made with<strong>CSS</strong>and<strong>HTML5</strong> .This contains all my work.
+                </p>
+                <a class="link primary-link" href ="https://papaya-quokka-44fa5f.netlify.app">Live Project</a>
+                <a class="link secondary-link" href ="https://github.com/NehaBajjuri/neog-lesson3">Source Project</a>
             </div>
             
         </li>
