--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
                 </p>
                 <a class="link primary-link" href ="https://replit.com/@nehabajjuri/Bahubali?embed=1&output=1">Live Project</a>
                 <a class="link secondary-link" href ="https://replit.com/@nehabajjuri/Bahubali#index.js">Source Project</a>
-                <h1>How well you know me?</h1>
+                <h1>My Portfolio</h1>
                 <small>October 2022</small>
                 <p>
                    My Portfolio made with<strong>CSS</strong>and<strong>HTML5</strong> .This contains all my work.
