--- a/projects.html
+++ b/projects.html
@@ -66,6 +66,13 @@
                 </p>
                 <a class="link primary-link" href ="https://profound-cannoli-755825.netlify.app/">Live Project</a>
                 <a class="link secondary-link" href ="https://github.com/NehaBajjuri/neog-class-4">Source Project</a>
+                <h1>Let's talk to pigs</h1>
+                <small>October 2022</small>
+                <p>
+                   It is a GUI app made with<strong>vanila.js,CSS</strong>and<strong>HTML5</strong> .This translates the text given by you to Pig Latin. It can be shared to family and friends and see their reactions.
+                </p>
+                <a class="link primary-link" href ="https://jolly-kringle-ce4371.netlify.app/">Live Project</a>
+                <a class="link secondary-link" href ="https://github.com/NehaBajjuri/neog4-2">Source Project</a>
             </div>
             
         </li>
