--- a/projects.html
+++ b/projects.html
@@ -80,6 +80,13 @@
                 </p>
                 <a class="link primary-link" href ="https://h8k5cd.csb.app/">Live Project</a>
                 <a class="link secondary-link" href ="https://codesandbox.io/s/stoic-chebyshev-h8k5cd?file=/src/App.js">Source Project</a>
+                <h1>Movie Timee!!</h1>
+                <small>October 2022</small>
+                <p>
+                   It is an app made with<strong> ReactJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
+                </p>
+                <a class="link primary-link" href ="https://su8gtw.csb.app/">Live Project</a>
+                <a class="link secondary-link" href ="https://github.com/NehaBajjuri/moviesreact">Source Project</a>
             </div>
             
         </li>
