--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,7 @@
       <ol class="list-non-bullet">
 
         <li>
+            <section class="section div">
             <div class="container container-center ">
                 <h1>How well you know me?</h1>
                 <small>August 2022</small>
@@ -44,6 +45,10 @@
                 </p>
                 <a class="link primary-link" href ="https://replit.com/@nehabajjuri/Do-you-know-me?embed=1&output=1">Live Project</a>
                 <a class="link secondary-link" href ="https://replit.com/@nehabajjuri/Do-you-know-me#index.js">Source Project</a>
+            </div>
+            </section>
+            <section class="section">
+            <div class="container container-center ">
                 <h1>Bahubali</h1>
                 <small>August 2022</small>
                 <p>
@@ -52,6 +57,10 @@
                 </p>
                 <a class="link primary-link" href ="https://replit.com/@nehabajjuri/Bahubali?embed=1&output=1">Live Project</a>
                 <a class="link secondary-link" href ="https://replit.com/@nehabajjuri/Bahubali#index.js">Source Project</a>
+            </div>
+        </section>
+            <section class="section div">
+            <div class="container container-center ">
                 <h1>My Portfolio</h1>
                 <small>October 2022</small>
                 <p>
@@ -59,6 +68,11 @@
                 </p>
                 <a class="link primary-link" href ="https://papaya-quokka-44fa5f.netlify.app">Live Project</a>
                 <a class="link secondary-link" href ="https://github.com/NehaBajjuri/neog-lesson3">Source Project</a>
+            </div>
+            </section>
+            <section class="section">
+            <div class="container container-center ">
+               
                 <h1>Banana Talks!!</h1>
                 <small>October 2022</small>
                 <p>
@@ -66,6 +80,10 @@
                 </p>
                 <a class="link primary-link" href ="https://profound-cannoli-755825.netlify.app/">Live Project</a>
                 <a class="link secondary-link" href ="https://github.com/NehaBajjuri/neog-class-4">Source Project</a>
+            </div>
+        </section>
+        <section class="section div">
+            <div class="container container-center ">
                 <h1>Pig Latin!!</h1>
                 <small>October 2022</small>
                 <p>
@@ -73,6 +91,10 @@
                 </p>
                 <a class="link primary-link" href ="https://jolly-kringle-ce4371.netlify.app/">Live Project</a>
                 <a class="link secondary-link" href ="https://github.com/NehaBajjuri/neog4-2">Source Project</a>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container container-center ">
                 <h1>Do you know what it is?</h1>
                 <small>October 2022</small>
                 <p>
@@ -80,6 +102,10 @@
                 </p>
                 <a class="link primary-link" href ="https://h8k5cd.csb.app/">Live Project</a>
                 <a class="link secondary-link" href ="https://codesandbox.io/s/stoic-chebyshev-h8k5cd?file=/src/App.js">Source Project</a>
+            </div>
+            </section>
+            <section class="section div">
+            <div class="container container-center ">
                 <h1>Movie Timee!!</h1>
                 <small>October 2022</small>
                 <p>
@@ -88,6 +114,62 @@
                 <a class="link primary-link" href ="https://su8gtw.csb.app/">Live Project</a>
                 <a class="link secondary-link" href ="https://github.com/NehaBajjuri/moviesreact">Source Project</a>
             </div>
+            </section>
+            <section class="section">
+                <div class="container-center">
+                    <h1>Cash-register-Manager</h1>
+                    <small>October 2022</small>
+                    <p>
+                       It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
+                    </p>
+                    <a class="link primary-link" href ="cash-register-neha.netlify.app">Live Project</a>
+                    <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark10">Source Project</a>
+            </div>
+            </section>
+            <section class="section div">
+                <div class="container-center">
+                    <h1>Is Your Birthday Lucky</h1>
+                    <small>October 2022</small>
+                    <p>
+                       It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
+                    </p>
+                    <a class="link primary-link" href ="is-your-birthday-lucky-neha.netlify.app">Live Project</a>
+                    <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark-11">Source Project</a>
+            </div>
+            </section>
+            <section class="section">
+                <div class="container-center">
+                    <h1>Fun with Triangles</h1>
+                    <small>October 2022</small>
+                    <p>
+                       It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
+                    </p>
+                    <a class="link primary-link" href ="fun-with-triangles-neha.netlify.app">Live Project</a>
+                    <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark-12">Source Project</a>
+            </div>
+            </section>
+            <section class="section div">
+                <div class="container-center">
+                    <h1>Is Your Birthday A Palindrome</h1>
+                    <small>October 2022</small>
+                    <p>
+                       It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
+                    </p>
+                    <a class="link primary-link" href ="symphonious-cascaron-0dcff4.netlify.app">Live Project</a>
+                    <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark-13">Source Project</a>
+            </div>
+            </section>
+            <section class="section">
+                <div class="container-center">
+                    <h1>Profit Or Loss</h1>
+                    <small>October 2022</small>
+                    <p>
+                       It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
+                    </p>
+                    <a class="link primary-link" href ="stocks-profit-loss-vanilajs.netlify.app">Live Project</a>
+                    <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark-14">Source Project</a>
+            </div>
+            </section>
             
         </li>
     </ol>
