--- a/projects.html
+++ b/projects.html
@@ -122,7 +122,7 @@
                     <p>
                        It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
                     </p>
-                    <a class="link primary-link" href ="cash-register-neha.netlify.app">Live Project</a>
+                    <a class="link primary-link" href ="cash-register-neha.netlify.app/">Live Project</a>
                     <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark10">Source Project</a>
             </div>
             </section>
@@ -133,7 +133,7 @@
                     <p>
                        It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
                     </p>
-                    <a class="link primary-link" href ="is-your-birthday-lucky-neha.netlify.app">Live Project</a>
+                    <a class="link primary-link" href ="is-your-birthday-lucky-neha.netlify.app/">Live Project</a>
                     <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark-11">Source Project</a>
             </div>
             </section>
@@ -144,7 +144,7 @@
                     <p>
                        It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
                     </p>
-                    <a class="link primary-link" href ="fun-with-triangles-neha.netlify.app">Live Project</a>
+                    <a class="link primary-link" href ="fun-with-triangles-neha.netlify.app/">Live Project</a>
                     <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark-12">Source Project</a>
             </div>
             </section>
@@ -155,7 +155,7 @@
                     <p>
                        It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
                     </p>
-                    <a class="link primary-link" href ="symphonious-cascaron-0dcff4.netlify.app">Live Project</a>
+                    <a class="link primary-link" href ="symphonious-cascaron-0dcff4.netlify.app/">Live Project</a>
                     <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark-13">Source Project</a>
             </div>
             </section>
@@ -166,7 +166,7 @@
                     <p>
                        It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
                     </p>
-                    <a class="link primary-link" href ="stocks-profit-loss-vanilajs.netlify.app">Live Project</a>
+                    <a class="link primary-link" href ="stocks-profit-loss-vanilajs.netlify.app/">Live Project</a>
                     <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark-14">Source Project</a>
             </div>
             </section>
