--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
                 <p>
                    My Portfolio made with<strong>CSS</strong>and<strong>HTML5</strong> .This contains all my work.
                 </p>
-                <a class="link primary-link" href ="https://papaya-quokka-44fa5f.netlify.app">Live Project</a>
+                <a class="link primary-link" href ="https://my-portfolio-44fa5f.netlify.app">Live Project</a>
                 <a class="link secondary-link" href ="https://github.com/NehaBajjuri/neog-lesson3">Source Project</a>
             </div>
             </section>
