--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,7 @@
                 <p>
                    It is a GUI app made with<strong>vanila.js,CSS</strong>and<strong>HTML5</strong> .This translates the text given by you to Pig Latin. It can be shared to family and friends and see their reactions.
                 </p>
-                <a class="link primary-link" href ="https://jolly-kringle-ce4371.netlify.app/">Live Project</a>
+                <a class="link primary-link" href ="https://jolly-kringle-ce4371.netlify.app">Live Project</a>
                 <a class="link secondary-link" href ="https://github.com/NehaBajjuri/neog4-2">Source Project</a>
             </div>
         </section>
