--- a/projects.html
+++ b/projects.html
@@ -120,7 +120,7 @@
                     <h1>Cash-register-Manager</h1>
                     <small>October 2022</small>
                     <p>
-                       It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
+                       It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends.
                     </p>
                     <a class="link primary-link" href ="https://cash-register-neha.netlify.app/">Live Project</a>
                     <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark10">Source Project</a>
@@ -131,7 +131,7 @@
                     <h1>Is Your Birthday Lucky</h1>
                     <small>October 2022</small>
                     <p>
-                       It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
+                       It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .It is a fun app that can be shared with your friends.
                     </p>
                     <a class="link primary-link" href ="https://is-your-birthday-lucky-neha.netlify.app/">Live Project</a>
                     <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark-11">Source Project</a>
@@ -142,7 +142,7 @@
                     <h1>Fun with Triangles</h1>
                     <small>October 2022</small>
                     <p>
-                       It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
+                       It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> It contains a quiz,areafunction and more.This can be shared with your friends .
                     </p>
                     <a class="link primary-link" href ="https://fun-with-triangles-neha.netlify.app/">Live Project</a>
                     <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark-12">Source Project</a>
@@ -153,7 +153,7 @@
                     <h1>Is Your Birthday A Palindrome</h1>
                     <small>October 2022</small>
                     <p>
-                       It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
+                       It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> . This app tells whether your birthday is a palindrome on not.This can be shared with your friends and family.
                     </p>
                     <a class="link primary-link" href ="https://symphonious-cascaron-0dcff4.netlify.app/">Live Project</a>
                     <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark-13">Source Project</a>
@@ -164,7 +164,7 @@
                     <h1>Profit Or Loss</h1>
                     <small>October 2022</small>
                     <p>
-                       It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
+                       It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong>.You can give your information and calculate the loss or profit percentage in your stocks.This can be shared with your friends .
                     </p>
                     <a class="link primary-link" href ="https://stocks-profit-loss-vanilajs.netlify.app/">Live Project</a>
                     <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark-14">Source Project</a>
