--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <section class="section div">
     <div class="container-center">
     <h1>Technologies</h1>
-    <p>I'm familiar with HTML5,CSS3,Git,JavaScript and Web Hosting</p>
+    <p>I'm familiar with HTML5,CSS3,Git,JavaScript,React,VanilaJs and Web Hosting</p>
 </div>
 </section>
 <section class="section">
