--- a/blogs.html
+++ b/blogs.html
@@ -30,7 +30,7 @@
        <section class="section div">
         <div class="container container-center ">
             <h1>Dummy Blog 1</h1>
-            <small>October 2022</small>
+            <small class="small">November 2022</small>
             <p>
                 The most well-known dummy text is the 'Lorem Ipsum', which is said to have originated in the 16th century. Lorem Ipsum is composed in a pseudo-Latin language which more or less corresponds to 'proper' Latin. It contains a series of real Latin words.
             </p>
