--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 <section class="section">
     <div class="container-center">
         <h1>Projects</h1>
-        <p>I like to showcase my work and you can see my projects hosted online</p><a class="link primary-link" href="/projects.html"> See Projects</a>
+        <p>I like to showcase my work and you can see my projects hosted online here.</p><div class="center"><a class="link primary-link" href="/projects.html"> See Projects</a></div>
     </div>
    
 </section>
 <section class="section div">
     <div class="container-center">
     <h1>Blogs</h1>
-    <p>I like to document my work and my thoughts</p><a class="link secondary-link" href="/blogs.html">Read Blogs</a>
+    <p>I like to document my work and my thoughts</p><div class="center"><a class="link secondary-link" href="/blogs.html">Read Blogs</a></div>
 </div>
 </section>
 <footer class="footer">
