added github links of 1 and 2 projects

--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
                 </p>
                 <div class="center">
                 <a class="link primary-link" href ="https://replit.com/@nehabajjuri/Do-you-know-me?embed=1&output=1">Live Project</a>
-                <a class="link secondary-link" href ="https://replit.com/@nehabajjuri/Do-you-know-me#index.js">Source Project</a>
+                <a class="link secondary-link" href ="https://github.com/NehaBajjuri/Do-you-know-me">Source Project</a>
             </div>
             </div>
             </section>
@@ -59,7 +59,7 @@
                 </p>
                 <div class="center">
                 <a class="link primary-link" href ="https://replit.com/@nehabajjuri/Bahubali?embed=1&output=1">Live Project</a>
-                <a class="link secondary-link" href ="https://replit.com/@nehabajjuri/Bahubali#index.js">Source Project</a>
+                <a class="link secondary-link" href ="https://github.com/NehaBajjuri/Bahubali">Source Project</a>
                 </div>
             </div>
         </section>
