--- a/projects.html
+++ b/projects.html
@@ -18,10 +18,10 @@
                 <a class="link" href="/index.html">Home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/projects.html">Projects</a>
+                <a class="link link-active"  href="/projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/blogs.html">Blogs</a>
+                <a class="link"  href="/blogs.html">Blogs</a>
             </li>
             </ul>
        </nav>
@@ -44,8 +44,8 @@
                     and check who really knows you.
                 </p>
                 <div class="center">
-                <a class="link primary-link" href ="https://replit.com/@nehabajjuri/Do-you-know-me?embed=1&output=1">Live Project</a>
-                <a class="link secondary-link" href ="https://github.com/NehaBajjuri/Do-you-know-me">Source Project</a>
+                <a class="link primary-link" target="_blank" href ="https://replit.com/@nehabajjuri/Do-you-know-me?embed=1&output=1">Live Project</a>
+                <a class="link secondary-link" target="_blank" href ="https://github.com/NehaBajjuri/Do-you-know-me">Source Project</a>
             </div>
             </div>
             </section>
@@ -58,8 +58,8 @@
                     and check who really knows you.
                 </p>
                 <div class="center">
-                <a class="link primary-link" href ="https://replit.com/@nehabajjuri/Bahubali?embed=1&output=1">Live Project</a>
-                <a class="link secondary-link" href ="https://github.com/NehaBajjuri/Bahubali">Source Project</a>
+                <a class="link primary-link" target="_blank" href ="https://replit.com/@nehabajjuri/Bahubali?embed=1&output=1">Live Project</a>
+                <a class="link secondary-link" target="_blank" href ="https://github.com/NehaBajjuri/Bahubali">Source Project</a>
                 </div>
             </div>
         </section>
@@ -71,8 +71,8 @@
                    My Portfolio made with<strong>CSS</strong>and<strong>HTML5</strong> .This contains all my work.
                 </p>
                 <div class="center">
-                <a class="link primary-link" href ="https://my-portfolio-44fa5f.netlify.app">Live Project</a>
-                <a class="link secondary-link" href ="https://github.com/NehaBajjuri/neog-lesson3">Source Project</a>
+                <a class="link primary-link" target="_blank" href ="https://my-portfolio-44fa5f.netlify.app">Live Project</a>
+                <a class="link secondary-link" target="_blank" href ="https://github.com/NehaBajjuri/neog-lesson3">Source Project</a>
             </div>
             </div>
             </section>
@@ -85,8 +85,8 @@
                    It is a GUI app made with<strong>vanila.js,CSS</strong>and<strong>HTML5</strong> .This translates the text given by you to Minion's Language. It can be shared to family and friends and see their reactions.
                 </p>
                 <div class="center">
-                <a class="link primary-link" href ="https://profound-cannoli-755825.netlify.app/">Live Project</a>
-                <a class="link secondary-link" href ="https://github.com/NehaBajjuri/neog-class-4">Source Project</a>
+                <a class="link primary-link" target="_blank" href ="https://profound-cannoli-755825.netlify.app/">Live Project</a>
+                <a class="link secondary-link" target="_blank" href ="https://github.com/NehaBajjuri/neog-class-4">Source Project</a>
                 </div>
             </div>
         </section>
@@ -98,8 +98,8 @@
                    It is a GUI app made with<strong>vanila.js,CSS</strong>and<strong>HTML5</strong> .This translates the text given by you to Pig Latin. It can be shared to family and friends and see their reactions.
                 </p>
                 <div class="center">
-                <a class="link primary-link" href ="https://jolly-kringle-ce4371.netlify.app">Live Project</a>
-                <a class="link secondary-link" href ="https://github.com/NehaBajjuri/neog4-2">Source Project</a>
+                <a class="link primary-link" target="_blank" href ="https://jolly-kringle-ce4371.netlify.app">Live Project</a>
+                <a class="link secondary-link" target="_blank" href ="https://github.com/NehaBajjuri/neog4-2">Source Project</a>
             
                 </div>
         </section>
@@ -111,8 +111,8 @@
                    It is an app made with<strong>React,CSS</strong>and<strong>HTML5</strong> . It can be shared to family and friends and see their reactions.
                 </p>
                 <div class="center">
-                <a class="link primary-link" href ="https://h8k5cd.csb.app/">Live Project</a>
-                <a class="link secondary-link" href ="https://codesandbox.io/s/stoic-chebyshev-h8k5cd?file=/src/App.js">Source Project</a>
+                <a class="link primary-link" target="_blank" href ="https://h8k5cd.csb.app/">Live Project</a>
+                <a class="link secondary-link" target="_blank" href ="https://codesandbox.io/s/stoic-chebyshev-h8k5cd?file=/src/App.js">Source Project</a>
                 </div>
             </div>
             </section>
@@ -124,8 +124,8 @@
                    It is an app made with<strong> ReactJS,CSS</strong>and<strong>HTML5</strong> .This can be shared with your friends to suggest.
                 </p>
                 <div class="center">
-                <a class="link primary-link" href ="https://su8gtw.csb.app/">Live Project</a>
-                <a class="link secondary-link" href ="https://github.com/NehaBajjuri/moviesreact">Source Project</a>
+                <a class="link primary-link" target="_blank" href ="https://su8gtw.csb.app/">Live Project</a>
+                <a class="link secondary-link" target="_blank"  href ="https://github.com/NehaBajjuri/moviesreact">Source Project</a>
                 </div>
             </div>
             </section>
@@ -138,8 +138,8 @@
                     </p>
                     
                 <div class="center">
-                    <a class="link primary-link" href ="https://cash-register-neha.netlify.app/">Live Project</a>
-                    <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark10">Source Project</a>
+                    <a class="link primary-link" target="_blank" href ="https://cash-register-neha.netlify.app/">Live Project</a>
+                    <a class="link secondary-link" target="_blank"  href ="https://github.com/NehaBajjuri/mark10">Source Project</a>
             </div>
                 </div>
             </section>
@@ -151,8 +151,8 @@
                        It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> .It is a fun app that can be shared with your friends.
                     </p>
                     <div class="center">
-                    <a class="link primary-link" href ="https://is-your-birthday-lucky-neha.netlify.app/">Live Project</a>
-                    <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark-11">Source Project</a>
+                    <a class="link primary-link" target="_blank" href ="https://is-your-birthday-lucky-neha.netlify.app/">Live Project</a>
+                    <a class="link secondary-link" target="_blank" href ="https://github.com/NehaBajjuri/mark-11">Source Project</a>
             </div>
                 </div>
             </section>
@@ -164,8 +164,8 @@
                        It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> It contains a quiz,areafunction and more.This can be shared with your friends .
                     </p>
                     <div class="center">
-                    <a class="link primary-link" href ="https://fun-with-triangles-neha.netlify.app/">Live Project</a>
-                    <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark-12">Source Project</a>
+                    <a class="link primary-link" target="_blank" href ="https://fun-with-triangles-neha.netlify.app/">Live Project</a>
+                    <a class="link secondary-link" target="_blank" href ="https://github.com/NehaBajjuri/mark-12">Source Project</a>
             </div>
             </div>
             </section>
@@ -177,8 +177,8 @@
                        It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong> . This app tells whether your birthday is a palindrome on not.This can be shared with your friends and family.
                     </p>
                     <div class="center">
-                    <a class="link primary-link" href ="https://symphonious-cascaron-0dcff4.netlify.app/">Live Project</a>
-                    <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark-13">Source Project</a>
+                    <a class="link primary-link" target="_blank" href ="https://symphonious-cascaron-0dcff4.netlify.app/">Live Project</a>
+                    <a class="link secondary-link" target="_blank" href ="https://github.com/NehaBajjuri/mark-13">Source Project</a>
             </div>
             </div>
             </section>
@@ -190,8 +190,8 @@
                        It is an app made with<strong> VanilaJS,CSS</strong>and<strong>HTML5</strong>.You can give your information and calculate the loss or profit percentage in your stocks.This can be shared with your friends .
                     </p>
                     <div class="center">
-                    <a class="link primary-link" href ="https://stocks-profit-loss-vanilajs.netlify.app/">Live Project</a>
-                    <a class="link secondary-link" href ="https://github.com/NehaBajjuri/mark-14">Source Project</a>
+                    <a class="link primary-link" target="_blank" href ="https://stocks-profit-loss-vanilajs.netlify.app/">Live Project</a>
+                    <a class="link secondary-link" target="_blank" href ="https://github.com/NehaBajjuri/mark-14">Source Project</a>
             </div>
                 </div>
             </section>
