--- a/blogs.html
+++ b/blogs.html
@@ -41,5 +41,21 @@
         </section>
     </li>
 </ol>
+<footer class="footer">
+    <div class="footer-header">Connect me Online!!</div>
+    <div>
+    <ul class="social-links list-non-bullet">
+        <li class="list-item-inline"><a class="link" href="https://github.com/nehabajjuri">github</a></li>
+        <li class="list-item-inline"><a class="link" href="https://twitter.com/bajjurineha">twitter</a></li>
+        <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/neha-bajjuri-473253227">linkedin</a></li>
+        <br>
+        <li class="list-item-inline"><img class="img" src="https://images.unsplash.com/photo-1654277041218-84424c78f0ae?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Z2l0aHViJTIwbG9nb3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"></li>
+        <li class="list-item-inline"><img  class="img" src="https://images.unsplash.com/photo-1611605698335-8b1569810432?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dHdpdHRlciUyMGxvZ298ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"></li>
+        <li class="list-item-inline"><img class="img" src="https://images.unsplash.com/photo-1611944212129-29977ae1398c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"></li>
+         
+    </ul>
+</div>
+</footer>
+
 </body>
 </html>
