--- a/blogs.html
+++ b/blogs.html
@@ -29,13 +29,15 @@
         <li>
        <section class="section div">
         <div class="container container-center ">
-            <h1>Dummy Blog 1</h1>
-            <small class="small">November 2022</small>
+            <h1> Starting with Web Development</h1>
+            <small class="small"></small>
             <p>
-                The most well-known dummy text is the 'Lorem Ipsum', which is said to have originated in the 16th century. Lorem Ipsum is composed in a pseudo-Latin language which more or less corresponds to 'proper' Latin. It contains a series of real Latin words.
+                Starting out in development can be overwhelming. With all the different languages, frameworks, and libraries to choose from, it can be difficult to know where to begin.
+
+                A great way to begin can be following a well-structured learning path from YouTube or reading Documentation.
             </p>
             <div class="center">
-            <a class="link primary-link" href ="https://dummyblog.hashnode.dev/dummy-blog/">Read more</a>
+            <a class="link primary-link" href ="https://blogbyneha.hashnode.dev/starting-the-web-development">Read more</a>
            </div>
         </div>
         </section>
@@ -48,11 +50,7 @@
         <li class="list-item-inline"><a class="link" href="https://github.com/nehabajjuri">github</a></li>
         <li class="list-item-inline"><a class="link" href="https://twitter.com/bajjurineha">twitter</a></li>
         <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/neha-bajjuri-473253227">linkedin</a></li>
-        <br>
-        <li class="list-item-inline"><img class="img" src="https://images.unsplash.com/photo-1654277041218-84424c78f0ae?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Z2l0aHViJTIwbG9nb3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"></li>
-        <li class="list-item-inline"><img  class="img" src="https://images.unsplash.com/photo-1611605698335-8b1569810432?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dHdpdHRlciUyMGxvZ298ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"></li>
-        <li class="list-item-inline"><img class="img" src="https://images.unsplash.com/photo-1611944212129-29977ae1398c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"></li>
-         
+       
     </ul>
 </div>
 </footer>
