--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
 <section class="section div">
     <div class="container-center">
     <h1>Technologies</h1>
-    <p>I'm familiar with HTML5,CSS3,Git,JavaScript,React,VanilaJs and Web Hosting</p>
+    <p>I'm familiar with HTML5, CSS3, Git, JavaScript, and have foundational knowledge in React.js, along with experience in web hosting.</p>
 </div>
 </section>
 <section class="section">
     <div class="container-center">
         <h1>Projects</h1>
-        <p>I like to showcase my work and you can see my projects hosted online here.</p><div class="center"><a class="link primary-link" href="/projects.html"> See Projects</a></div>
+        <p>I enjoy showcasing my projects, and you can explore them live on the web through the following link.</p><div class="center"><a class="link primary-link" href="/projects.html"> See Projects</a></div>
     </div>
    
 </section>
 <section class="section div">
     <div class="container-center">
     <h1>Blogs</h1>
-    <p>I like to document my work and my thoughts</p><div class="center"><a class="link secondary-link" href="/blogs.html">Read Blogs</a></div>
+    <p>I have a habit of documenting my work processes and thoughts. I find value in keeping a detailed record of my journey.</p><div class="center"><a class="link secondary-link" href="/blogs.html">Read Blogs</a></div>
 </div>
 </section>
 <footer class="footer">
